--- a/SalesWebMvc2/appsettings.json
+++ b/SalesWebMvc2/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvc2Context": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvc2Context-66669373-6bb6-4fb4-8634-c8167a262772;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvc2Context": "server=localhost;userid=developer;password=1234567;database=saleswebmvcappdb"
   }
 }
